--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Sprotify</title>
 </head>
 <body>
@@ -15,53 +15,53 @@
         <h1>12 Albúns para ouvir enquanto conversa no discord</h1>
         <section>
             <div class="album-group">
-                <img src="img/azulao.jpeg" alt= "fabio">
+                <img src="img/azulao.jpeg" alt= "Fábio">
                 <p>Blue Man Group</p>
             </div>
-            <div class="album-group">
-                <img src="img/21.jpeg" alt= "fabio">
+            <a class="album-group" target="_blank" href="https://open.spotify.com/album/0Lg1uZvI312TPqxNWShFXL?si=1hV3uNipSjuAaTessX5Aug">
+                <img src="img/21.jpeg" alt= "Fábio">
                 <p>Fábio - 21</p>
-            </div>
-            <div class="album-group">
-                <img src="img/remix.jpeg" alt= "fabio">
-                <p>Fábio - The Remixes Good Guy Gone Bad</p>
-            </div>
-            <div class="album-group">
-                <img src="img/scorpion.jpeg" alt= "fabio">
+            </a>
+            <a class="album-group" target="_blank" href="https://open.spotify.com/album/6nT2WJS6WHH86XRgkSK8yC?si=VwOC0DkCTLGCWpdHOabUgA">
+                <img src="img/remix.jpeg" alt= "Fábio">
+                <p>Fábio - Good Guy Gone Bad: The Remixes</p>
+            </a>
+            <a class="album-group" target="_blank" href="https://open.spotify.com/album/1ATL5GLyefJaxhQzSPVrLX?si=cdd478dfbc0e41df">
+                <img src="img/scorpion.jpeg" alt= "Fábio">
                 <p>Fábio - Scorpion</p>
-            </div>
-            <div class="album-group">
-                <img src="img/damn.jpeg" alt= "fabio">
+            </a>
+            <a class="album-group" target="_blank" href="https://open.spotify.com/album/4eLPsYPBmXABThSJ821sqY?si=70fe55f8bbb34fbb">
+                <img src="img/damn.jpeg" alt= "Fábio">
                 <p>Fábio - Damn.</p>
-            </div>
-            <div class="album-group">
-                <img src="img/belo.jpg" alt= "fabio">
+            </a>
+            <a class="album-group" target="_blank" href="https://open.spotify.com/album/1e4dJtEy3fywiOwHQgYOf2?si=McLnlnvSS9en0lpt1EU_xg">
+                <img src="img/belo.jpg" alt= "Fábio">
                 <p>Fábio - Seu fã</p>
-            </div>
-            <div class="album-group">
-                <img src="img/MITHRIL (4).png" alt= "fabio">
+            </a>
+            <a class="album-group" target="_blank" href="https://open.spotify.com/album/2jGyiRzQpIUs4ZATSHzUVa?si=b9EOn0plQPeBUeDRt7vItg">
+                <img src="img/MITHRIL (4).png" alt= "Vitória e Barão Vermelho">
                 <p>Vitória & Barão Vermelho - Melhores Momentos</p>
-            </div>
-            <div class="album-group">
-                <img src="img/amarelo.png" alt= "fabio">
+            </a>
+            <a class="album-group" target="_blank" href="https://open.spotify.com/album/5cUY5chmS86cdonhoFdn8h?si=cf97a148470b4ec5">
+                <img src="img/amarelo.png" alt= "Gabriel Começos">
                 <p>Gabriel Começos - AmarElo</p>
-            </div>
-            <div class="album-group">
-                <img src="img/lider.png" alt= "fabio">
-                <p>Claudio Madeirada e Gabriel Começos - O líder em movimento</p>
-            </div>
-            <div class="album-group">
-                <img src="img/oasis.png" alt= "fabio">
-                <p>Vitória e Carlos - (What's the Story) Morning Glory?</p>
-            </div>
-            <div class="album-group">
-                <img src="img/kill.png" alt= "fabio">
-                <p>Vitória - Kill 'Em All</p>
-            </div>
-            <div class="album-group">
-                <img src="img/madeirada.jpg" alt= "fabio">
+            </a>
+            <a class="album-group" target="_blank" href="https://open.spotify.com/album/5YcCaIe5wa22O3vZsX0od5?si=8856fe7da9bc4f4f">
+                <img src="img/lider.png" alt= "Claudio Madeirada e Gabriel Começos">
+                <p>Claudio Madeirada e Gabriel Começos - O Líder em Movimento</p>
+            </a>
+            <a class="album-group" target="_blank" href="https://open.spotify.com/album/1VW1MFNstaJuygaoTPkdCk?si=465dddcf09724510">
+                <img src="img/oasis.png" alt= "Vitoria e Carlos">
+                <p>Vitoria e Carlos - (What's the Story) Morning Glory?</p>
+            </a>
+            <a class="album-group" target="_blank" href="https://open.spotify.com/album/1aGapZGHBovnmhwqVNI6JZ?si=vrVdkJlCQj2IjYNx24mZeA">
+                <img src="img/kill.png" alt= "Vitoria">
+                <p>Vitoria - Kill 'Em All</p>
+            </a>
+            <a class="album-group" target="_blank" href="https://open.spotify.com/album/1wNvClMbVbPmoUsoFaASCK?si=673f83e796ac43df">
+                <img src="img/madeirada.jpg" alt= "Claudio Madeirada">
                 <p>Claudio Madeirada - Amar É Para os Fortes</p>
-            </div>
+            </a>
         </section>
     </main>
 </body>
