--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <main>
         <h1>12 Albúns para ouvir enquanto conversa no discord</h1>
         <section>
-            <div class="album-group">
+            <a class="album-group" target="_blank" href="https://open.spotify.com/artist/7zHhscQ9kdR9fNGAffWz6z?si=O2sO8FK_SYKDuWzq0593oQ">
                 <img src="img/azulao.jpeg" alt= "Fábio">
                 <p>Blue Man Group</p>
-            </div>
+            </a>
             <a class="album-group" target="_blank" href="https://open.spotify.com/album/0Lg1uZvI312TPqxNWShFXL?si=1hV3uNipSjuAaTessX5Aug">
                 <img src="img/21.jpeg" alt= "Fábio">
                 <p>Fábio - 21</p>
