Adicionado o planet hemp

--- a/index.html
+++ b/index.html
@@ -15,52 +15,56 @@
         <h1>12 Albúns para ouvir enquanto conversa no discord</h1>
         <section>
             <a class="album-group" target="_blank" href="https://open.spotify.com/artist/7zHhscQ9kdR9fNGAffWz6z?si=O2sO8FK_SYKDuWzq0593oQ">
-                <img src="img/azulao.jpeg" alt= "Fábio">
+                <img src="img/azulao.jpeg" alt="Fábio">
                 <p>Blue Man Group</p>
             </a>
             <a class="album-group" target="_blank" href="https://open.spotify.com/album/0Lg1uZvI312TPqxNWShFXL?si=1hV3uNipSjuAaTessX5Aug">
-                <img src="img/21.jpeg" alt= "Fábio">
+                <img src="img/21.jpeg" alt="Fábio">
                 <p>Fábio - 21</p>
             </a>
             <a class="album-group" target="_blank" href="https://open.spotify.com/album/6nT2WJS6WHH86XRgkSK8yC?si=VwOC0DkCTLGCWpdHOabUgA">
-                <img src="img/remix.jpeg" alt= "Fábio">
+                <img src="img/remix.jpeg" alt="Fábio">
                 <p>Fábio - Good Guy Gone Bad: The Remixes</p>
             </a>
             <a class="album-group" target="_blank" href="https://open.spotify.com/album/1ATL5GLyefJaxhQzSPVrLX?si=cdd478dfbc0e41df">
-                <img src="img/scorpion.jpeg" alt= "Fábio">
+                <img src="img/scorpion.jpeg" alt="Fábio">
                 <p>Fábio - Scorpion</p>
             </a>
             <a class="album-group" target="_blank" href="https://open.spotify.com/album/4eLPsYPBmXABThSJ821sqY?si=70fe55f8bbb34fbb">
-                <img src="img/damn.jpeg" alt= "Fábio">
+                <img src="img/damn.jpeg" alt="Fábio">
                 <p>Fábio - Damn.</p>
             </a>
             <a class="album-group" target="_blank" href="https://open.spotify.com/album/1e4dJtEy3fywiOwHQgYOf2?si=McLnlnvSS9en0lpt1EU_xg">
-                <img src="img/belo.jpg" alt= "Fábio">
+                <img src="img/belo.jpg" alt="Fábio">
                 <p>Fábio - Seu fã</p>
             </a>
             <a class="album-group" target="_blank" href="https://open.spotify.com/album/2jGyiRzQpIUs4ZATSHzUVa?si=b9EOn0plQPeBUeDRt7vItg">
-                <img src="img/MITHRIL (4).png" alt= "Vitória e Barão Vermelho">
+                <img src="img/MITHRIL (4).png" alt="Vitória e Barão Vermelho">
                 <p>Vitória & Barão Vermelho - Melhores Momentos</p>
             </a>
             <a class="album-group" target="_blank" href="https://open.spotify.com/album/5cUY5chmS86cdonhoFdn8h?si=cf97a148470b4ec5">
-                <img src="img/amarelo.png" alt= "Gabriel Começos">
+                <img src="img/amarelo.png" alt="Gabriel Começos">
                 <p>Gabriel Começos - AmarElo</p>
             </a>
             <a class="album-group" target="_blank" href="https://open.spotify.com/album/5YcCaIe5wa22O3vZsX0od5?si=8856fe7da9bc4f4f">
-                <img src="img/lider.png" alt= "Claudio Madeirada e Gabriel Começos">
+                <img src="img/lider.png" alt="Claudio Madeirada e Gabriel Começos">
                 <p>Claudio Madeirada e Gabriel Começos - O Líder em Movimento</p>
             </a>
             <a class="album-group" target="_blank" href="https://open.spotify.com/album/1VW1MFNstaJuygaoTPkdCk?si=465dddcf09724510">
-                <img src="img/oasis.png" alt= "Vitoria e Carlos">
+                <img src="img/oasis.png" alt="Vitoria e Carlos">
                 <p>Vitoria e Carlos - (What's the Story) Morning Glory?</p>
             </a>
             <a class="album-group" target="_blank" href="https://open.spotify.com/album/1aGapZGHBovnmhwqVNI6JZ?si=vrVdkJlCQj2IjYNx24mZeA">
-                <img src="img/kill.png" alt= "Vitoria">
+                <img src="img/kill.png" alt="Vitoria">
                 <p>Vitoria - Kill 'Em All</p>
             </a>
             <a class="album-group" target="_blank" href="https://open.spotify.com/album/1wNvClMbVbPmoUsoFaASCK?si=673f83e796ac43df">
-                <img src="img/madeirada.jpg" alt= "Claudio Madeirada">
+                <img src="img/madeirada.jpg" alt="Claudio Madeirada">
                 <p>Claudio Madeirada - Amar É Para os Fortes</p>
+            </a>
+            <a class="album-group" target="_blank" href="https://open.spotify.com/album/4HeTmf2mFKrOC4Gw50lLTM?si=JYVLxhnSStiwiCSR4dlImw">
+                <img src="img/planet-hemp.jpeg" alt="Carlos">
+                <p>Carlos - Os Cães Ladram Mas a Caravana Não Pára</p>
             </a>
         </section>
     </main>
