Adicionado diego o advogado

--- a/index.html
+++ b/index.html
@@ -1,72 +1,90 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Sprotify</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Sprotify</title>
 </head>
 <body>
-    <main>
-        <h1>12 Albúns para ouvir enquanto conversa no discord</h1>
-        <section>
-            <a class="album-group" target="_blank" href="https://open.spotify.com/artist/7zHhscQ9kdR9fNGAffWz6z?si=O2sO8FK_SYKDuWzq0593oQ">
-                <img src="img/azulao.jpeg" alt="Fábio">
-                <p>Blue Man Group</p>
-            </a>
-            <a class="album-group" target="_blank" href="https://open.spotify.com/album/0Lg1uZvI312TPqxNWShFXL?si=1hV3uNipSjuAaTessX5Aug">
-                <img src="img/21.jpeg" alt="Fábio">
-                <p>Fábio - 21</p>
-            </a>
-            <a class="album-group" target="_blank" href="https://open.spotify.com/album/6nT2WJS6WHH86XRgkSK8yC?si=VwOC0DkCTLGCWpdHOabUgA">
-                <img src="img/remix.jpeg" alt="Fábio">
-                <p>Fábio - Good Guy Gone Bad: The Remixes</p>
-            </a>
-            <a class="album-group" target="_blank" href="https://open.spotify.com/album/1ATL5GLyefJaxhQzSPVrLX?si=cdd478dfbc0e41df">
-                <img src="img/scorpion.jpeg" alt="Fábio">
-                <p>Fábio - Scorpion</p>
-            </a>
-            <a class="album-group" target="_blank" href="https://open.spotify.com/album/4eLPsYPBmXABThSJ821sqY?si=70fe55f8bbb34fbb">
-                <img src="img/damn.jpeg" alt="Fábio">
-                <p>Fábio - Damn.</p>
-            </a>
-            <a class="album-group" target="_blank" href="https://open.spotify.com/album/1e4dJtEy3fywiOwHQgYOf2?si=McLnlnvSS9en0lpt1EU_xg">
-                <img src="img/belo.jpg" alt="Fábio">
-                <p>Fábio - Seu fã</p>
-            </a>
-            <a class="album-group" target="_blank" href="https://open.spotify.com/album/2jGyiRzQpIUs4ZATSHzUVa?si=b9EOn0plQPeBUeDRt7vItg">
-                <img src="img/MITHRIL (4).png" alt="Vitória e Barão Vermelho">
-                <p>Vitória & Barão Vermelho - Melhores Momentos</p>
-            </a>
-            <a class="album-group" target="_blank" href="https://open.spotify.com/album/5cUY5chmS86cdonhoFdn8h?si=cf97a148470b4ec5">
-                <img src="img/amarelo.png" alt="Gabriel Começos">
-                <p>Gabriel Começos - AmarElo</p>
-            </a>
-            <a class="album-group" target="_blank" href="https://open.spotify.com/album/5YcCaIe5wa22O3vZsX0od5?si=8856fe7da9bc4f4f">
-                <img src="img/lider.png" alt="Claudio Madeirada e Gabriel Começos">
-                <p>Claudio Madeirada e Gabriel Começos - O Líder em Movimento</p>
-            </a>
-            <a class="album-group" target="_blank" href="https://open.spotify.com/album/1VW1MFNstaJuygaoTPkdCk?si=465dddcf09724510">
-                <img src="img/oasis.png" alt="Vitoria e Carlos">
-                <p>Vitoria e Carlos - (What's the Story) Morning Glory?</p>
-            </a>
-            <a class="album-group" target="_blank" href="https://open.spotify.com/album/1aGapZGHBovnmhwqVNI6JZ?si=vrVdkJlCQj2IjYNx24mZeA">
-                <img src="img/kill.png" alt="Vitoria">
-                <p>Vitoria - Kill 'Em All</p>
-            </a>
-            <a class="album-group" target="_blank" href="https://open.spotify.com/album/1wNvClMbVbPmoUsoFaASCK?si=673f83e796ac43df">
-                <img src="img/madeirada.jpg" alt="Claudio Madeirada">
-                <p>Claudio Madeirada - Amar É Para os Fortes</p>
-            </a>
-            <a class="album-group" target="_blank" href="https://open.spotify.com/album/4HeTmf2mFKrOC4Gw50lLTM?si=JYVLxhnSStiwiCSR4dlImw">
-                <img src="img/planet-hemp.jpeg" alt="Carlos">
-                <p>Carlos - Os Cães Ladram Mas a Caravana Não Pára</p>
-            </a>
-        </section>
-    </main>
+  <main>
+    <h1>Albúns para ouvir no discord</h1>
+    <section>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/artist/7zHhscQ9kdR9fNGAffWz6z?si=O2sO8FK_SYKDuWzq0593oQ">
+        <img src="img/azulao.jpeg">
+        <p>Blue Man Group</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/0Lg1uZvI312TPqxNWShFXL?si=1hV3uNipSjuAaTessX5Aug">
+        <img src="img/21.jpeg">
+        <p>Fábio - 21</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/6nT2WJS6WHH86XRgkSK8yC?si=VwOC0DkCTLGCWpdHOabUgA">
+        <img src="img/remix.jpeg">
+        <p>Fábio - Good Guy Gone Bad: The Remixes</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/1ATL5GLyefJaxhQzSPVrLX?si=cdd478dfbc0e41df">
+        <img src="img/scorpion.jpeg">
+        <p>Fábio - Scorpion</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/4eLPsYPBmXABThSJ821sqY?si=70fe55f8bbb34fbb">
+        <img src="img/damn.jpeg">
+        <p>Fábio - Damn.</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/1e4dJtEy3fywiOwHQgYOf2?si=McLnlnvSS9en0lpt1EU_xg">
+        <img src="img/belo.jpg">
+        <p>Fábio - Seu fã</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/2jGyiRzQpIUs4ZATSHzUVa?si=b9EOn0plQPeBUeDRt7vItg">
+        <img src="img/MITHRIL (4).png">
+        <p>Vitória & Barão Vermelho - Melhores Momentos</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/5cUY5chmS86cdonhoFdn8h?si=cf97a148470b4ec5">
+        <img src="img/amarelo.png">
+        <p>Gabriel Começos - AmarElo</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/5YcCaIe5wa22O3vZsX0od5?si=8856fe7da9bc4f4f">
+        <img src="img/lider.png">
+        <p>Claudio Madeirada e Gabriel Começos - O Líder em Movimento</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/1VW1MFNstaJuygaoTPkdCk?si=465dddcf09724510">
+        <img src="img/oasis.png">
+        <p>Vitoria e Carlos - (What's the Story) Morning Glory?</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/1aGapZGHBovnmhwqVNI6JZ?si=vrVdkJlCQj2IjYNx24mZeA">
+        <img src="img/kill.png">
+        <p>Vitoria - Kill 'Em All</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/1wNvClMbVbPmoUsoFaASCK?si=673f83e796ac43df">
+        <img src="img/madeirada.jpg">
+        <p>Claudio Madeirada - Amar É Para os Fortes</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/4HeTmf2mFKrOC4Gw50lLTM?si=JYVLxhnSStiwiCSR4dlImw">
+        <img src="img/planet-hemp.jpeg">
+        <p>Carlos - Os Cães Ladram Mas a Caravana Não Pára</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/7gsWAHLeT0w7es6FofOXk1?si=fRWzBVCNSkWg2RGszxQouw">
+        <img src="img/the-life-of-pablo.jpeg">
+        <p>Diego o Advogado - The Life Of Diego</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/5oHsohkw3BQ1Y86RxC8Qo0?si=2b7a6d2f1b3e4a1c">
+        <img src="img/ceu-lilas.jpeg">
+        <p>Diego o Advogado - Céu Lilás</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/track/6mFkJmJqdDVQ1REhVfGgd1?si=33cc215fe59a4a03">
+        <img src="img/wish-you-were-here.jpeg">
+        <p>Diego o Advogado - Wish You Were Here</p>
+      </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/0z2cTD6XcPLajQbL5EMisU?si=d9dc4e3fc70040ac">
+        <img src="img/cartola-1974.jpeg">
+        <p>Diego o Advogado - Diego (1974)</p>
+      </a>
+    </section>
+  </main>
 </body>
 </html>
