Adicionado dona sonia

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
         <img src="img/cartola-1974.jpeg">
         <p>Diego o Advogado - Diego (1974)</p>
       </a>
+      <a class="album-group" target="_blank" href="https://open.spotify.com/album/1YZh5Huo7eN4QERA51SAQD?si=tLAbsOpqQxKyUcaUzPxn-w">
+        <img src="img/a-vida-por-um-beijo.jpeg">
+        <p>Dona Sonia - A Vida Por Um Beijo</p>
+      </a>
     </section>
   </main>
 </body>
